Slow View2D scrolling on a high-resolution (hiDPI) screen #110917

Closed
opened 2023-08-08 10:51:02 +02:00 by Yevgeny Makarov · 2 comments

System Information
Operating system: macOS-12.6.3-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101

Blender Version
Broken: version: 3.3.5, branch: master, commit date: 2023-03-20 10:19, hash: dd0cd1df1d1a
Worked: -

Short description of error
Scrolling (with the mouse wheel) in Properties, Node, Info, Console... editors is twice as slow on a high-resolution screen.
Here is a hard-coded delta value of 40 pixels. Should be multiplied by the UI_SCALE_FAC.

See: view_scrollright_exec, view_scrollleft_exec, view_scrolldown_exec, view_scrollup_exec.

**System Information** Operating system: macOS-12.6.3-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101 **Blender Version** Broken: version: 3.3.5, branch: master, commit date: 2023-03-20 10:19, hash: `dd0cd1df1d1a` Worked: - **Short description of error** Scrolling (with the mouse wheel) in Properties, Node, Info, Console... editors is twice as slow on a high-resolution screen. Here is a hard-coded delta value of 40 pixels. Should be multiplied by the `UI_SCALE_FAC`. See: `view_scrollright_exec`, `view_scrollleft_exec`, `view_scrolldown_exec`, `view_scrollup_exec`.
Yevgeny Makarov added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-08 10:51:03 +02:00
YimingWu added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-09 04:29:37 +02:00
Member

Confirmed, made a patch to fix this thing.

Confirmed, made a patch to fix this thing.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-08-09 04:50:45 +02:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-08-09 04:50:53 +02:00

It was accidental. My apologies.

It was accidental. My apologies.
Germano Cavalcante added
Platform
macOS
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-09 04:52:39 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-13 04:57:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110917
No description provided.